# minitwitter

./: .env.example  .gitignore  LICENSE  README.md  justfile
api/: justfile  pyproject.toml
api/minitwitter/: manage.py  pyproject.toml
api/minitwitter/auth/: tests.py  urls.py  views.py
api/minitwitter/common/: cache.py  models.py  notifications.py  pagination.py  serializers.py  test_utils.py  tests.py  urls.py  views.py
api/minitwitter/common/test_utils/: factories.py  setup.py  steps.py
api/minitwitter/minitwitter/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
api/minitwitter/populate/management/commands/: populate_1_users.py  populate_2_posts.py
api/minitwitter/post/: models.py  serializers.py  tests.py  urls.py  views.py
api/minitwitter/post/migrations/: 0001_initial.py  0002_like.py  0003_post_image.py
api/minitwitter/uauth/: apps.py  serializers.py  views.py
api/minitwitter/user/: models.py  serializers.py  tests.py  urls.py  views.py
api/minitwitter/user/migrations/: 0001_initial.py  0002_follower.py
api/minitwitter/user/tests/: test_auth.py
api/ops/dev/: Dockerfile  compose.yml
app/: justfile
app/minitwitter/: package-lock.json  package.json
app/minitwitter/src/: App.tsx  main.tsx
app/minitwitter/src/components/: ButtonLink.tsx  FeedComponent.tsx  PasswordInput.tsx  PostCard.tsx  ProfileCard.tsx  ProfileComponent.tsx  TextInput.tsx
app/minitwitter/src/layouts/: BaseLayout.tsx
app/minitwitter/src/pages/: LoginPage.tsx  NotFoundPage.tsx
app/ops/: Dockerfile  compose.yml
ops/dev/api/: Dockerfile  compose.yml
